syntax = "proto3";

package gabriel.lego;

message LEGOState {
    enum FRAME_RESULT {
        NO_CHANGE = 0;
        SUCCESS = 1;
        TASK_ERROR = 2;
        JUNK_FRAME = 3;
        LOW_CONFIDENCE_RECON = 4;
        OTHER_CV_ERROR = 5;
    }

    message Timestamps {
        // unix epoch in seconds
        double received = 1;
        double sent = 3;
    }

    string task_id = 1; // task currently performing
    Timestamps timestamps = 2;
    FRAME_RESULT result = 3;
    bool task_finished = 4;
    int32 target_state_index = 5; // step we want to reach
    int32 current_state_index = 6; // previous good step

    bytes error_prev_board_state = 7; // optional buffer for error state
}

